--- a/css/index.css
+++ b/css/index.css
@@ -75,14 +75,79 @@ p {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    margin-bottom: 20px;
-    border-bottom: 1px dashed black;
+}
+
+.container-row {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+
+}
+
+.single-container {
+    display: flex;
+    flex-direction: column;
+    margin: 1%;
+    margin-bottom: 4%;
+    border-bottom: 1px dotted grey;
+    width: 25%;
+}
+
+.text-container {
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: row;
+    margin-top: 4%;
+    margin-bottom: 4%;
+}
+
+button {
+    border-radius: 10px;
+    border: 2px solid black;
+    width: 40%;
+    height: 30px;
+    margin-bottom: 5%;
+    background: white;
 }
 
 .top-content .text-container {
+    display: flex;
     width: 48%;
     padding: 0 1%;
     padding-bottom: 20px;  
+    margin: 80px;
+}
+
+.top-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    width: 50%;
+    margin: 2%;
+}
+
+.top-home-content {
+    display: flex;
+}
+
+.line {
+    border-bottom: 1px dotted grey;
+    margin-top: 2%;
+}
+
+.page-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.top-img {
+    margin-top: 2%;
+}
+
+.logo {
+    margin-top: 2%;
+    margin-right: 5%;
 }
 
 .middle-content {
@@ -127,12 +192,13 @@ p {
 }
 
 footer {
-    width: 100%;
+    display: flex;
+    justify-content: space-between;
     background: black;
+    width: 55%;
 }
 
 footer nav {
-    width: 60%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -143,4 +209,22 @@ footer nav {
 footer nav a {
     color: white;
     text-decoration: none;
+    margin-right: 70%;
 }
+
+header nav {
+    display: flex;
+    vertical-align: top;
+    margin-top: 6%;
+  }
+  
+  header nav a {
+    margin-right: 65px;
+    font-size: 14px;
+    color: gray;
+    text-decoration: none;
+  }
+
+  .head-container {
+    display: flex;
+  }
